2022/02/01 sign up has completed.

--- a/frontend/src/components/Directory/style.scss
+++ b/frontend/src/components/Directory/style.scss
@@ -45,6 +45,8 @@
         justify-content: flex-start;
 
         hr {
+            height: auto;
+
             margin: 0 7px 0 7px;
         }
         .children {
