2022/02/02 Create Directory Completed.

--- a/frontend/src/components/Directory/style.scss
+++ b/frontend/src/components/Directory/style.scss
@@ -31,7 +31,13 @@
             height: auto;
             width: auto;
 
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+            align-items: center;
+
             label {
+                margin-left: 8px;
                 cursor: pointer;
             }
         }
