2022/02/04 File Delete Completed.

--- a/frontend/src/components/Holder/File/style.scss
+++ b/frontend/src/components/Holder/File/style.scss
@@ -1,6 +1,11 @@
 .file {
-    height: 24px;
+    height: 32px;
     width: auto;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 
     .icon {
         margin-left: 9px;
