--- a/frontend/src/components/Holder/style.scss
+++ b/frontend/src/components/Holder/style.scss
@@ -1,8 +1,14 @@
 .holder {
-    width: 50%;
+    height: 100%;
+    width: 100%;
+
+    border-width: 1px 0;
 
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+
+    border-color: black;
+    border-style: solid;
 }
 
