--- a/frontend/src/pages/Main/style.scss
+++ b/frontend/src/pages/Main/style.scss
@@ -1,5 +1,46 @@
 .main {
     height: 100%;
     width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .content {
+        height: 100%;
+        width: 100%;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+
+        .left {
+            height: 100%;
+            width: 50%;
+
+            overflow: auto;
+        }
+        .hr {
+            height: 100%;
+            width: 0;
+
+            border-width: 1px;
+            padding: 0;
+
+            cursor: col-resize;
+        }
+        .right {
+            height: 100%;
+            width: 50%;
+        }
+    }
+    .footer {
+        height: 16px;
+        width: 100%;
+
+        background-color: blue;
+    }
 }
 
