--- a/frontend/src/pages/Main/style.scss
+++ b/frontend/src/pages/Main/style.scss
@@ -22,14 +22,25 @@
 
             overflow: auto;
         }
-        .hr {
+        .middle {
             height: 100%;
-            width: 0;
+            width: 32px;
 
-            border-width: 1px;
-            padding: 0;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
 
-            cursor: col-resize;
+            .hr {
+                height: 100%;
+                width: 0;
+
+                border-width: 0 0 0 1px;
+                padding: 0;
+
+                border-style: solid;
+                cursor: col-resize;
+            }
         }
         .right {
             height: 100%;
