2022/02/25 18:04 Add over view future.

--- a/frontend/src/components/User/style.scss
+++ b/frontend/src/components/User/style.scss
@@ -2,7 +2,7 @@
     height: 64px;
     width: 100%;
 
-    border-width: 1px 0;
+    border-width: 1px;
 
     border-color: red;
     border-style: solid;
