--- a/frontend/src/components/Holder/style.scss
+++ b/frontend/src/components/Holder/style.scss
@@ -2,13 +2,13 @@
     height: 100%;
     width: 100%;
 
-    border-width: 1px 0;
+    border-width: 1px;
 
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
 
-    border-color: black;
+    border-color: red;
     border-style: solid;
 }
 
