--- a/frontend/src/pages/Main/style.scss
+++ b/frontend/src/pages/Main/style.scss
@@ -45,6 +45,11 @@
         .right {
             height: 100%;
             width: 50%;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
         }
     }
     .footer {
