--- a/frontend/src/components/Content/style.scss
+++ b/frontend/src/components/Content/style.scss
@@ -12,11 +12,14 @@
   border-color: red;
   border-style: solid;
 
-  textarea {
+  .container {
     height: 100%;
     width: 100%;
 
-    resize: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
   }
 }
 
