--- a/frontend/src/pages/Main/style.scss
+++ b/frontend/src/pages/Main/style.scss
@@ -26,10 +26,15 @@
             height: 100%;
             width: 32px;
 
+            border-width: 1px;
+
             display: flex;
             flex-direction: row;
             justify-content: center;
             align-items: center;
+
+            border-color: red;
+            border-style: solid;
 
             .hr {
                 height: 100%;
