2022/02/26 Imported monaco editor.

--- a/frontend/src/components/User/style.scss
+++ b/frontend/src/components/User/style.scss
@@ -1,10 +1,10 @@
 .user {
-    height: 64px;
+    min-height: 64px;
     width: 100%;
 
-    border-width: 1px;
+    // border-width: 1px;
 
-    border-color: red;
-    border-style: solid;
+    // border-color: red;
+    // border-style: solid;
 }
 
