--- a/frontend/src/components/Content/Bar/style.scss
+++ b/frontend/src/components/Content/Bar/style.scss
@@ -2,15 +2,15 @@
   height: auto;
   width: 100%;
 
-  border-width: 1px;
+  // border-width: 1px;
 
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 
-  border-color: red;
-  border-style: solid;
+  // border-color: red;
+  // border-style: solid;
 
   .name {
     height: auto;
