--- a/frontend/src/components/Content/Text/style.scss
+++ b/frontend/src/components/Content/Text/style.scss
@@ -2,16 +2,6 @@
   height: 100%;
   width: 100%;
 
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-
-  textarea {
-    height: 100%;
-    width: 100%;
-
-    resize: none;
-  };
+  overflow: hidden;
 }
 
