--- a/frontend/src/components/Content/style.scss
+++ b/frontend/src/components/Content/style.scss
@@ -2,24 +2,14 @@
   height: 100%;
   width: 100%;
 
-  border-width: 1px;
+  // border-width: 1px;
 
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
 
-  border-color: red;
-  border-style: solid;
-
-  .container {
-    height: 100%;
-    width: 100%;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
+  // border-color: red;
+  // border-style: solid;
 }
 
