--- a/frontend/src/pages/Main/style.scss
+++ b/frontend/src/pages/Main/style.scss
@@ -7,6 +7,8 @@
     justify-content: center;
     align-items: center;
 
+    // overflow: hidden;
+
     .content {
         height: 100%;
         width: 100%;
@@ -22,30 +24,11 @@
 
             overflow: auto;
         }
-        .middle {
+        .hr {
             height: 100%;
-            width: 32px;
+            width: 4px;
 
-            border-width: 1px;
-
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-
-            border-color: red;
-            border-style: solid;
-
-            .hr {
-                height: 100%;
-                width: 0;
-
-                border-width: 0 0 0 1px;
-                padding: 0;
-
-                border-style: solid;
-                cursor: col-resize;
-            }
+            cursor: col-resize;
         }
         .right {
             height: 100%;
